# misdirection-proxy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  prometheus.yml  pyproject.toml  references.md  sonar-project.properties
.github/workflows/: ci.yml  tests.yml
docs/: devto-article.md  devto-post.md
scripts/: build_training_data.py  simulate_traffic.py  training_data.json
src/misdirection/: __init__.py
src/misdirection/core/: __init__.py  adaptive.py  cmpe.py  context_filter.py  session_manager.py
src/misdirection/detector/: __init__.py  hybrid_detector.py  intention.py  ml_detector.py
src/misdirection/eval/: __init__.py  bench.py  metrics.py
src/misdirection/proxy/: __init__.py  circuit_breaker.py  gateway.py  metrics.py  proxy.py  rate_limiter.py
tests/: conftest.py
tests/integration/: test_context_firewall.py  test_fix14_gateway_hybrid.py  test_gateway.py  test_gateway_mock.py  test_gateway_production.py  test_hardening.py  test_health_metrics.py  test_load_performance.py  test_metrics_fixes.py  test_metrics_redis_healthy.py  test_proxy.py  test_redis_integration.py  test_session_fixes.py  test_stress_fracture.py
tests/unit/: test_adaptive.py  test_adaptive_fix.py  test_bench.py  test_cmpe.py  test_cmpe_fix.py  test_cmpe_fix2.py  test_cmpe_fix3.py  test_context_filter.py  test_context_filter_fix.py  test_detector.py  test_detector_fix.py  test_detector_fix2.py  test_detector_spanish.py  test_fix13_get_fallback.py  test_metrics.py  test_ml_detector.py  test_ml_detector_path.py  test_rate_limiter_circuit_breaker.py
